<resources>
    <string name="title_string">#7ba42b</string>
    <string name="verified_string">#7ba42b</string>
    <string name="notverified_string">#FF0A0A</string>
    <string name="title">Boskoi Logo here</string>
    <string name="add_incident">Boskoi | Add Report</string>
    <string name="view_incident">Boskoi | View Reports</string>
    <string name="incident_details">Boskoi | Report Detail</string>
    <string name="app_settings">Boskoi | Settings </string>
    <string name="boskoi_about">Boskoi | About </string>
    <string name="boskoi_find">Boskoi | Find </string>
    <string name="boskoi_sync">Boskoi | Synchronize </string>
    <string name="boskoi_splash_screen">Boskoi | Splash Screen"</string>
	<string name="menu_home">Home</string>
	<string name="menu_sync">Sync</string>
	<string name="boskoi_map">Map</string>
	<string name="boskoi_list">List</string>
	<string name="boskoi_report">Report</string>
    <string name="app_name">Boskoi</string>
	<string name="reports">Boskoi</string>
    <string name="date_time">Event Title</string>
    <string name="prompt_mesg">Choose an edible to filter</string>
    <string name="str_post_photos">Add a photo</string>
    <string name="add_categories">Choose edible(s)</string>
    <string name="choose_method">Choose method</string>
    <string name="choose_pictures_method">Please choose how you would like to get the photo</string>
    <string name="preferences_notifications">Notifications</string>
    <string name="new_incidents">{0} New reports </string>
	<string name="new_categories">{0} New edibles </string>
	<string name="incident_date_change">Change date</string>
	<string name="incident_date">Date</string>
	<string name="incident_current_date">augustus 23, 2010</string>
	<string name="incident_time">at 09:34 PM</string>
	<string name="incident_verified">Verified</string>
	<string name="incident_unverified">Unverified</string>
	<string name="incident_location">Location</string>
	<string name="incident_description">Description</string>
	<string name="incident_title">Title</string>
	<string name="incident_category">Edibles</string>
	<string name="incident_switch_language">Switching language</string>
	<string name="incident_add_category">Select edible type(s)</string>
	<string name="incident_photo">Photos</string>
	<string name="optional">Optional</string>
	<string name="notification_title">Boskoi background service</string>
	<string name="add_tip">To add a report hold down your finger on the map.</string>
	<string name="incident_menu_map">View Map</string>
	<string name="incident_menu_refresh">Refresh</string>
	<string name="incident_menu_lang">Edible Language</string>
    <string name="btn_country">Default location</string>
    <string name="btn_confirm">Save</string>
    <string name="btn_zoom">Zoom</string>
    <string name="btn_details">Details</string>
    <string name="btn_navigate">Navigate to</string>
    <string name="btn_gallery">Gallery</string>
    <string name="btn_camera">Camera</string>
    <string name="btn_save">Save</string>
    <string name="btn_back">Back</string>
    <string name="btn_find">Find me</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_add_photo">Add a photo</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_send">Send</string>
    <string name="add_location">Add a location</string>
    <string name="change_location">Change location</string>
	<string name="view_map">Show on map</string>
	<string name="txt_about_btn">About</string>
	<string name="incident_filter_category">Filtered by: </string>
	<string name="incident_menu_add">Add report</string>
	<string name="incident_menu_satelite">Satelite/Map-mode</string>
	<string name="incident_list">View reports</string>
    <string name="toast_photos">Photo added</string>
    <string name="invalid_email_address">An invalid email address was entered</string>
    <string name="invalid_boskoi_instance">Looks like the URL entered is not a Boskoi or Ushahidi instance</string>
    <string name="sms_to_boskoi_failed">Failed to post SMS to Boskoi. Make sure username and password are correct</string>
	<string name="instructions">Tap your location on the map. You can tap with your finger to move the marker.</string>
	<string name="hint_sms_send">This means all incoming sms will be pushed to Boskoi</string>
	<string name="hint_auto_fetch">Boskoi will automatically download new reports.</string>
	<string name="hint_auto_update_delay">Set how often Boskoi syncronizes with the selected instance.</string>
	<string name="find_location">Finding your location</string>
	<string name="found_location">Found your location</string>
	<string name="location_not_found">A location can not currently be determined. Enable more location sources i.e. GPS Satellites in Security and Location Settings.</string>
	<string name="loc_not_found">Your location could not be determined. Make sure you have pin point the exact location on the map.</string>
	<string name="no_reports_found">No reports found</string>
	<string name="retrieving_reports">Retrieving new reports</string>
	<string name="retrieved_reports">Retrieved new reports</string>
	<string name="report_successfully_added_online">Report successfully posted online and is awaiting approval.</string>
	<string name="report_successfully_added_offline">Report sent to local storage due to 
		unvailability of internet. Remember to sync to the online 
		instance when there there is internet connection.</string>
	<string name="failed_to_add_report_offline">Failed to send report.Check to see if you filled all required fields.</string>
	<string name="failed_to_add_report_online">Connection failure, cannot submit your report.</string>
	<string name="empty_report_title">Enter a title for the incident</string>
	<string name="empty_report_description">Enter a description for the incident</string>
	<string name="empty_report_location">The location description must be at least 3 characters long</string>
	<string name="empty_report_categories">Select at least one edible type</string>
	<string name="not_enough_first_name">A first name must be at least 3 characters long</string>
	<string name="not_enough_last_name">A last name must be at least 3 characters long</string>
	<string name="report_not_found_for_category">No reports for this edible found</string>
	<string name="hint_location">Extra location information</string>
	<string name="internet_connection">Network error, please ensure you are connected to the internet</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_hide">Hide</string>
    <string name="alert_dialog_something">Something</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_error_title">Oops</string>
    <string name="alert_dialog_error_msg">An error occurred fetching the reports. Make sure you entered an Ushahidi instance.</string>
	<string name="menu_settings">Settings</string>
	<string name="advanced_settings">Advanced settings</string>
	<string name="hint_advanced_settings">For more advanced settings</string>
	<string name="sms_settings">SMS settings</string>
	<string name="txt_clear_cache">Clear cache</string>
	<string name="txt_confirm_clear_cache">Are you sure you want to clear the cache?</string>
	<string name="option_location">Default folder</string>
	<string name="hint_clear_cache">Clear all stored data</string>
    <string name="hint_option_location">The location where you want to store items saved from the selected instance.</string>
	<string name="hint_SD_save_path">Type a folder name</string>
	<string name="bg_notification">Background notifications</string>
	<string name="vibrate">Vibrate</string>
	<string name="hint_vibrate">Will cause phone to vibrate</string>
	<string name="ringtone">Ringtone</string>
	<string name="hint_ringtone">Play a ringtone</string>
	<string name="select_ringtone">Select ringtone</string>
	<string name="hint_select_ringtone">Change which ringtone to use</string>
	<string name="flash_led">Flashing led</string>
	<string name="hint_flash_led">Cause phones LED to flash</string>
	<string name="hint_domain">Select the Boskoi instance that you wish to interact with.</string>
	<string name="chk_auto_fetch">Auto sync</string>
	<string name="chk_sms_send">Send SMS to Boskoi</string>
	<string name="txt_auto_update_delay">Auto sync frequency</string>
	<string name="txt_path_SD">Path on SD:</string>
	<string name="txt_cache">Cache files:</string>
	<string name="txt_countries">Select a default country</string>
	<string name="txt_domain">Choose your website</string>
	<string name="txt_first_name">First name</string>
	<string name="hint_first_name">For attribution when submitting a report (optional).</string>
	<string name="txt_last_name">Last name</string>
	<string name="hint_last_name">Also for attribution when submitting a report (optional).</string>
	<string name="txt_user_name">Username</string>
	<string name="hint_user_name">Your Boskoi username</string>
	<string name="txt_password">Password</string>
	<string name="hint_password">Your Boskoi password</string>
	<string name="txt_email">E-mail address</string>
	<string name="hint_email">For contact purposes only</string>
	<string name="total_reports">Number of reports</string>
	<string name="hint_camera">Touch screen to take picture</string>
	<string name="hint_total_reports">The total number of reports to fetch from the selected instance.</string>
	<string name="version_name_lbl">Version </string>
	<string name="menu_about">About</string>
	<string name="boskoi_url">more about FoAM</string>
	<string name="welcome_mgs">A mobile phone guide to edible urban wild-food sources, combining the ancient skills of foragers with current open source media. 
	\n\nThis pilot-project is initiated by FoAm (http://www.fo.am),\nsupported by het Prins Bernhard cultuurfonds (http://www.prinsbernhardcultuurfonds.nl)\nand developed by \nJoey van der Bie (http://www.vanderBie.net), \nMaarten van der Mark (http://www.vdmark.info) and \nVincent Vijn (http://www.vijn.me)
	</string>
	<string name="menu_blog">News</string>
	<string name="blog_error">Failed to receive news.</string>
	<string name="hello_eula">Boskoi is a guide to edible urban wild-food sources.
Before starting please read the following information.</string>
	<string name="eula_1">1. Be friendly</string>
	<string name="eula_1_sub">Ask permission when ownership is unclear</string>
	<string name="eula_2">2. Be generous</string>
	<string name="eula_2_sub">Only pick what you will eat. Leave most for others (or wildlife)</string>
	<string name="eula_3">3. Be alert</string>
	<string name="eula_3_sub">Be ware of toxicity and don\'t tread on other plants when picking</string>
	<string name="eula_4">4. Be careful</string>
	<string name="eula_4_sub">Don\'t put any rare or protected species on the map</string>
	<string name="license_title">Boskoi is Open Source</string>
	<string name="license">Boskoi is licensed under the LGPL v3 license. More information on <a href="http://www.boskoi.org/open">http://www.boskoi.org/open</a></string>
	<string name="privacy_title">Privacy</string>
	<string name="privacy_info">We use Google Analytics to improve our application, read what this implies on <a href="http://www.google.com/intl/en_uk/analytics/tos.html">http://goo.gl/2EXSr</a>. A version without Analytics can be provided on request</string>
	<string name="thankyou">Thank you for taking the time to read our rules, if you accept our terms you are free to enjoy the fruits of the world!</string>
   <string name="eulaBtn">Show rules</string>
   <string name="eula_title">Boskoi Terms of Use</string>
   <string name="eula_accept">Accept</string>
   <string name="eula_refuse">Refuse</string>
</resources>