<?xml version="1.0" encoding="utf-8"?>
<!--  
  Copyright (c) 2010 Boskoi
  All rights reserved
  Contact: developer@boskoi.org
  Developers: Joey van der Bie, Maarten van der Mark and Vincent Vijn
  Website: http://www.boskoi.org
  
  GNU Lesser General Public License Usage
  This file may be used under the terms of the GNU Lesser
  General Public License version 3 as published by the Free Software
  Foundation and appearing in the file LICENSE.LGPL included in the
  packaging of this file. Please review the following information to
  ensure the GNU Lesser General Public License version 3 requirements
  will be met: http://www.gnu.org/licenses/lgpl.html.	
 	
 
  If you have questions regarding the use of this file, please contact
  Boskoi developers at developer@boskoi.org.
 -->
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
<com.boskoi.android.app.DialogPreference
	android:key="clear_cache_preference"
   	android:title="@string/txt_clear_cache"
   	android:dialogTitle="@string/txt_clear_cache"
   	android:dialogMessage="@string/txt_confirm_clear_cache"
   	android:summary="@string/hint_clear_cache"
   	android:positiveButtonText="@string/btn_ok"
   	android:negativeButtonText="@string/btn_cancel" />
</PreferenceScreen>