<?xml version="1.0" encoding="utf-8"?>
<!--  
  Copyright (c) 2010 Boskoi
  All rights reserved
  Contact: developer@boskoi.org
  Developers: Joey van der Bie, Maarten van der Mark and Vincent Vijn
  Website: http://www.boskoi.org
  
  GNU Lesser General Public License Usage
  This file may be used under the terms of the GNU Lesser
  General Public License version 3 as published by the Free Software
  Foundation and appearing in the file LICENSE.LGPL included in the
  packaging of this file. Please review the following information to
  ensure the GNU Lesser General Public License version 3 requirements
  will be met: http://www.gnu.org/licenses/lgpl.html.	
 	
 
  If you have questions regarding the use of this file, please contact
  Boskoi developers at developer@boskoi.org.
 -->
   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:background="@drawable/background_color" >
	<ScrollView 
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
		android:paddingBottom="5px">
	   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:background="@drawable/background_color" >
	    <!-- Parent layout starts -->
	    <LinearLayout 
	    	android:layout_width="fill_parent" 
	    	android:layout_height="fill_parent"
	    	android:orientation="vertical"
			android:paddingLeft="5px"
			android:paddingRight="5px" >
			<!-- Title layout begins 
			<LinearLayout 
				android:orientation="vertical"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:paddingBottom="15px">
		
				<TextView	android:id="@+id/lbl_title" 
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textColor="@drawable/date_color"
					android:textStyle="bold"
					android:text="@string/incident_title"/>
		
				<EditText android:id="@+id/incident_title" 
		  			android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:capitalize="words"
					android:autoText="true"  /> 
			
			</LinearLayout>-->
			<!-- Title layout ends. -->		
			

			<!-- Location layout starts. -->
			<LinearLayout android:orientation="vertical"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:paddingBottom="15px"  android:focusable="true" android:focusableInTouchMode="true">
								<TextView	
					android:id="@+id/incident_loc" 
					android:layout_marginTop= "10px"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textStyle="bold"
					android:textSize="18dp"
					android:textColor="@drawable/date_color" 
					android:text="@string/incident_location" 
					android:paddingBottom="5px"/>	
		<com.google.android.maps.MapView 
			android:id="@+id/location_map_inline"
			android:layout_width="fill_parent"
			android:layout_height="300px"
			android:apiKey="@string/google_map_api_key"
			android:enabled="true"		
			android:clickable="true"
			 />

	
				<LinearLayout android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:paddingBottom="5px"  android:paddingTop="5px" android:orientation="vertical">
					<Button android:id="@+id/location"
       				android:layout_width="wrap_content"
          			android:layout_height="wrap_content"
          			android:textStyle="bold"
          			android:text="@string/add_location" 
          			android:gravity="center" 
          			android:layout_gravity="center_vertical"
          			android:visibility="visible" 
          			 />
					<EditText android:id="@+id/incident_location"
						android:layout_marginTop= "10px"
	  					android:layout_height="100px"
	  					android:hint="@string/hint_location"
	  					android:layout_gravity="center_vertical" android:layout_width="fill_parent"/>	
				
			</LinearLayout>
			<!-- Location layout ends. -->
			
						<!-- category layout starts. -->
			<LinearLayout android:layout_width="fill_parent" 
				android:layout_height="wrap_content" android:orientation="vertical">          		
          		<TextView	android:id="@+id/lbl_category_dec" 
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textStyle="bold"
					android:textColor="@drawable/date_color" 
					android:text="@string/incident_category"
					android:textSize="18dp"
					android:paddingTop="10px"
					android:paddingBottom="5px" />	
	          	<Button android:id="@+id/add_category"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textStyle="bold"
						android:text="@string/incident_add_category" android:gravity="center"/>
				<TextView android:id="@+id/lbl_category" 
						android:layout_width="fill_parent"
						android:textStyle="bold"
						android:textColor="@drawable/date_color" android:layout_height="fill_parent"/>	
      		</LinearLayout>	
			<!-- Categories layout ends.  -->
			
			<!-- Description layout starts -->
			<LinearLayout android:orientation="vertical"
				android:layout_width="fill_parent" 
				android:layout_height="fill_parent"
				android:layout_marginTop="10px">
				
				<TextView	android:id="@+id/lbl_incidents_dec" 
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textStyle="bold"
					android:textSize="18dp"
					android:textColor="@drawable/date_color" 
					android:text="@string/incident_description" 
					android:paddingBottom="5px"/>		
				
				<EditText android:id="@+id/incident_desc" 
					android:hint="@string/incident_description"
					android:layout_width="fill_parent"
					android:layout_height="100px"
					android:scrollbars="vertical" />
			</LinearLayout>
			<!-- Description layout ends. -->
			
			
			<!-- Photo layout starts. -->
			<LinearLayout android:orientation="vertical"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content">
			<TextView	android:id="@+id/lbl_incidents_photo" 
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textStyle="bold"
					android:textSize="18dp"
					android:textColor="@drawable/date_color" 
					android:text="@string/incident_photo"
					android:paddingBottom="5px"/>		
				
			<LinearLayout android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content">
						
				<Button android:id="@+id/btnPicture" 
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textStyle="bold" 
					android:text="@string/btn_add_photo" />		
			
<!-- 				<TextView android:id="@+id/lbl_photo" 
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:singleLine="false"
					android:textStyle="bold"
					android:textColor="@drawable/date_color"
					android:visibility="gone" /> -->
					
			<ImageView android:layout_width="100px"
				android:layout_height="100px" 
				android:id="@+id/imagepreview" 
				android:layout_marginLeft="20dip"
				android:layout_marginTop="-15dip"
				android:layout_alignParentRight="true">
			</ImageView>
			
			</LinearLayout>
			</LinearLayout>
			

			<!-- Photo layout ends. -->
			
			<!-- Date layout starts. -->
			<LinearLayout android:orientation="vertical"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10px">
					
				<TextView	android:id="@+id/lbl_incidents_date" 
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textStyle="bold"
					android:textSize="18dp"
					android:textColor="@drawable/date_color" 
					android:text="@string/incident_date" 
					android:paddingBottom="5px"/>		
				<!-- <TextView	android:id="@+id/lbl_date" 
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textStyle="bold"
					android:textColor="@drawable/date_color" 
					android:text="@string/incident_current_date" /> -->
			 	<LinearLayout android:orientation="horizontal"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content">
					<Button android:id="@+id/pick_date"
        				android:layout_width="wrap_content"
          				android:layout_height="wrap_content"
          				android:text="@string/incident_current_date"/>
          				<!-- android:text="@string/incident_date_change"/>-->
    				<Button android:id="@+id/pick_time"
       					android:layout_width="wrap_content"
          				android:layout_height="wrap_content"
          				android:text="@string/incident_time"/>
      			</LinearLayout>
			</LinearLayout>
			<!-- Date layout ends. -->    

			</LinearLayout>

		</LinearLayout>
		<!--  Parent layout ends.  -->
		<!-- User values -->
			<TextView 	android:text="@string/optional" 
						android:id="@+id/optional" 
						android:layout_width="fill_parent" 
						android:layout_height="wrap_content"
						android:textStyle="bold"
						android:textSize="18dp"
						android:textColor="@drawable/dark_color"
						android:background="@drawable/background_color_block"
						android:paddingTop="5px"
						android:paddingLeft="5px"
						android:paddingRight="5px"
						android:paddingBottom="10px"
						
						/>
			<LinearLayout android:orientation="horizontal"
				android:layout_height="wrap_content" android:layout_width="fill_parent"
						android:background="@drawable/background_color_block"
						
						
			android:paddingLeft="5px"
			android:paddingRight="5px">
			<LinearLayout android:layout_height="wrap_content" android:orientation="vertical" android:layout_gravity="left" android:layout_width="wrap_content">
				<TextView android:id="@+id/lbl_firstname"
				    android:layout_width="fill_parent"
					android:layout_height="wrap_content" 
					android:textStyle="bold"
					android:textSize="18dp"
					android:text="@string/txt_first_name" 
					android:textColor="@drawable/dark_color"		/>
				<EditText android:id="@+id/firstname" 
				android:hint="@string/txt_first_name"
			  	android:layout_width="fill_parent"
					android:layout_height="wrap_content" 
					android:layout_weight="1"/>
			</LinearLayout>
			<LinearLayout android:orientation="vertical"
				android:layout_height="wrap_content"
				android:gravity="right" android:layout_gravity="right" android:layout_width="fill_parent" android:layout_marginLeft="10px">
				<TextView android:id="@+id/lbl_lastname"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content" 
					android:textStyle="bold"
					android:textSize="18dp"
					android:text="@string/txt_last_name" 
					android:textColor="@drawable/dark_color"/>
				<EditText android:id="@+id/lastname" 
				 	android:hint="@string/txt_last_name"
			  	android:layout_width="fill_parent"
					android:layout_height="wrap_content" 
					android:layout_weight="1"/>
			</LinearLayout>
			
			</LinearLayout>
			<LinearLayout android:orientation="vertical"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/background_color_block"	
			android:paddingLeft="5px"
			android:paddingRight="5px">
				<TextView android:id="@+id/lbl_email"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content" 
					android:textStyle="bold"
					android:textSize="18dp"
					android:text="@string/txt_email" 
					android:textColor="@drawable/dark_color"
						/>
				<EditText android:id="@+id/email" 
			  	android:hint="@string/hint_email"
			  	android:layout_width="fill_parent"
					android:layout_height="wrap_content" 
					android:layout_weight="1"/>
			</LinearLayout>			
		<!-- Buttons layout starts.  -->
			<RelativeLayout android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
			android:paddingLeft="5px"
			android:paddingRight="5px"
			android:paddingTop="5px">
	
				<Button android:id="@+id/incident_add_btn"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_x="15px"
					android:layout_y="15px"
					android:layout_alignParentRight="true"
  					android:layout_marginLeft="10px"
  					android:textStyle="bold"
					android:text="@string/btn_send" />
       
				<!-- <Button android:id="@+id/incident_add_cancel"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
 					android:layout_toLeftOf="@id/incident_add_btn"
  					android:layout_alignTop="@id/incident_add_btn"
  					android:textStyle="bold"
					android:text="@string/btn_cancel" />-->
	
			</RelativeLayout>
			<!-- Buttons layout ends. -->
</LinearLayout>	


	</ScrollView></LinearLayout>